--- a/about.html
+++ b/about.html
@@ -5,11 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html">
     <title>Владимир Маркиев в соцсетях</title>
-    
-    <!-- Preload fonts -->
-    <link rel="preload" href="css/style_fonts.css" as="style">
 
     <!-- Stylesheets -->
+    <link href="css/style_fonts.css" as="style">
     <link rel="stylesheet" href="css/style_main.css">
     <link rel="stylesheet" href="css/style_nav.css">
     <link rel="stylesheet" href="css/style_about.css">
@@ -71,7 +69,7 @@
     <ul class="breadcrumb" id="breadcrumb">
         <!-- КНОПКА МЕНЮ -->
         <li>
-            <button class="openbtn" id="openbtn">Открыть меню</button>
+            <button class="openbtn" id="openbtn">Меню</button>
         </li>
         <li>
             <a tabindex="7" href="index.html">Главная</a>
@@ -85,56 +83,67 @@
     <div class="main">
         <div class="content">
             <h1 class="h1">Владимир Маркиев. Рассказ о себе, ссылки на соцсети, проекты и контакты</h1>
-            <p>На этой странице я рассказываю о себе в свободной форме. Здесь вы можете узнать о моих <a href="#interests">интересах и хобби</a>, а также ознакомиться с моими <a href="#projects">проектами и профилями</a> в соцсетях.</p>
+            <p>На этой странице я рассказываю о себе в свободной форме. Здесь вы можете узнать о моих <a href="#interests">интересах и хобби</a>, а также ознакомиться с моими <a href="#projects">проектами и профилями</a> в соцсетях. Если вы потерялись, перейдите на <a href="index.html">Главную страницу</a>.</p> 
         </div>
         <a name="interests"></a>
         <div class="content">
             <h2 class="h2">О себе в свободной форме</h2>
             <p>Я живу в Санкт-Петербурге, увлекаюсь фотографией, автомобилями, музыкой и историей. У меня большая коллекция фотографий, которые я люблю выкладывать в фотоальбомы на своей <a href="#vk">странице ВК</a>.</p>
-            <p>Я люблю фотографировать автомобили на улице. Когда я вижу интересный автомобиль, то обязательно делаю его снимок. Коллекционировать интересные машины я не могу, зато коллекционировать фотографии очень легко. В моей коллекции уже больше 1000 фотографий интересных машин. Всегда готов поддержать разговор о новых моделях и интересных элементах кузова.</p>
-            <p>Из музыки я люблю разные жанры. Самым первым любимым жанром был панк-рок, но сейчас мне нравится кантри, инди, альтернатива и многое другое. Люблю читать и смотреть интервью любимых музыкантов и рассуждать о тенденциях в музыке любых лет.</p>
-            <p>А ещё меня увлекает история. Я обожаю читать и смотреть сюжеты про историю разных мест. От Карелии, откуда я родом, до Санкт-Петербурга, где я живу. От поморья до глубокой Тайги. Про староверов, коренные народы и местных жителей. особенно меня увлекает история Петроградской стороны. Я люблю ходить по улицам, делать пометки по каждому дому, а дома читать про каждого жителя, про архитектуру. Меня восхищает то, как связаны истории людей и мест, как далеко тянутся связи. Я даже пишу большой проект про историю жителей Петроградской стороны. Хочу создать бот в телеграм, который бы выдавал историю по каждому дому. Если у вас есть любая история любого жителя Петроградской стороны - про известного или неизвестного архитектора, поэта, военного - пишите мне, мне очень интересно. Если вы сами или кто-то из вашей семьи и знакомых жил на Петроградской стороне, тоже пишите мне. Мне интересна любая история. Мои контакты можно найти на этой странице.<br>P.S. Если знаете что-то о создании ботов в телеграм, тоже пишите.</p>
+            <p>Я люблю фотографировать автомобили на улице. Когда я вижу интересный автомобиль, обязательно делаю его снимок. Коллекционировать интересные машины я не могу, зато коллекционировать фотографии очень легко. В моей коллекции уже больше 1000 фотографий интересных машин. Всегда готов поддержать разговор о новых моделях и интересных элементах кузова.</p>
+            <p>Из музыки я люблю разные жанры. Самым первым любимым жанром был панк-рок, но сейчас мне нравится кантри, инди, альтернатива и многое другое. Люблю читать и смотреть интервью любимых музыкантов и рассуждать о тенденциях в музыке всех времён и народов.</p>
+            <p>А ещё меня увлекает история. Я обожаю читать и смотреть сюжеты про историю разных мест. От Карелии, откуда я родом, до глубокой Тайги, где я никогда не был. Про староверов, коренные народы и местных жителей. От Поморья, где живут удивительные люди, до Санкт-Петербурга, где живу я, и Выборга, где я учился.</p>
+            <p>Особенно меня увлекает история Петроградской стороны. Я люблю ходить по улицам, делать пометки по каждому зданию, а дома читать про жителей и их истории, про архитектуру. Меня восхищает то, как связаны истории людей и мест, как далеко тянутся связи. У меня даже есть большой проект про историю жителей Петроградской стороны.</p>
+            <p>Хочу создать бот в телеграм, который бы выдавал историю по каждому дому и жителям. Если у вас есть любая история любого жителя Петроградской стороны - известного или неизвестного, архитектора, поэта, военного - пишите мне, мне очень интересно. Если вы сами или кто-то из вашей семьи и знакомых жил на Петроградской стороне, тоже пишите мне. Мне интересна любая история. Мои контакты можно найти ниже на этой странице.</p>
+            <p>P.S. Если знаете что-то о создании ботов в телеграм, тоже пишите.</p>
         </div>
         <a name="projects"></a>
         <div class="content">
             <h2 class="h2">Социальные сети и проекты</h2>
             <fieldset class="fs01">
                 <legend><a tabindex="1" href="https://github.com/Grolribasi/" class="soc gh" target="_blank" title="Открыть в новой вкладке">GitHub</a></legend>
-                <p class="soc">Мой GitHub! Всю прелесть GitHub я открыл для себя совсем недавно. Поэтому у меня ещё мало репоизиториев. Но мне нравится git и я стараюсь его развивать. Одно из направлений развития - это <a href="https://github.com/Grolribasi/grolribasi.github.io" target="_blank" title="Открыть в новой вкладке">перенос сайта</a> на GitHub Pages. Так классно иметь возможность работать над сайтом с нескольких компьютеров и так классно вести разработку в отдельной ветке.</p>
+                <p class="soc">Мой GitHub! Всю прелесть GitHub я открыл для себя совсем недавно. Поэтому у меня ещё мало репозиториев. Но мне нравится git и я стараюсь его развивать.</p>
+                <p>Одно из направлений развития - это <a href="https://github.com/Grolribasi/grolribasi.github.io" target="_blank" title="Исходный код сайта">перенос сайта</a> на GitHub Pages. Так классно иметь возможность работать над сайтом с нескольких компьютеров и вести разработку в отдельной ветке.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
                 <legend><a tabindex="2" name="vk" href="https://vk.com/cookiespunk" class="soc vk" target="_blank" title="Открыть в новой вкладке">Владимир Петров</a>|<a tabindex="3" href="https://vk.com/theptsd" class="soc vk2" target="_blank" title="Открыть в новой вкладке">ThePTSD</a>|<a tabindex="4" href="https://vk.com/behindmousing" class="soc vk3" target="_blank" title="Открыть в новой вкладке">Замышление</a></legend>
-                <p class="soc"><a href="https://vk.com/cookiespunk">Владимир Петров</a> - моя личная страница ВК. Моя настоящая фамилия - Маркиев, но с ВК так повелось с давних пор. Сейчас даже поисковики выдают эту страницу ВК в результатах по запросу "Владимир Маркиев".</p>
-                <p>Страница ThePTSD создавалась для продвижения канала на YouTube, но вскоре стала популярнее его. Потом у меня не осталось времени на проект PTSD, я решил временно его остановить. Сейчас я не работаю переводчиком, но за сферой поглядываю. Были мысли возобновить проект PTSD, но пока я не уверен, что хочу.
+                <p class="soc">Почему я даю ссылку на страницу какого-то Владимира Петрова? На самом деле - это моя страница ВК. Моя настоящая фамилия - Маркиев, но в ВК я Петров. Так повелось с давних пор. Сейчас даже поисковики выдают эту страницу ВК в результатах по запросу "Владимир Маркиев".</p>
+                <p>Страница ThePTSD создавалась для продвижения канала на YouTube, но вскоре стала популярнее его. Потом у меня не осталось времени на проект PTSD, я решил временно его приостановить.</p>
+                <p>Я по-прежнему приглядываю за сферой перевода. Были мысли возобновить проект PTSD, но пока я не уверен, что хочу.
                 </p>
-                <p>Страница Замышление - мой маленький проект по написанию текстов обо всём и ни о чём. Я давно ничего не писал в Замышление, но у меня изначально не было никакого графика публикаций, никакой общей темы, никаких обязательств перед аудиторией и никакой аудитории.</p>
+                <p>Страница Замышление - мой маленький проект по написанию текстов обо всём и ни о чём.</p>
+                <p>Я давно ничего не писал в Замышление, но у меня никогда не было никакого графика публикаций, никакой общей темы, никаких обязательств перед аудиторией. Впрочем, аудитории тоже никогда не было.</p>
                 <p>
             </fieldset>
             <br>
             <fieldset class="fs01">
                 <legend> <a tabindex="5" name="yt" href="https://www.youtube.com/channel/UC_n20vgzZheV8dLhOfzlczA" class="soc yt" target="_blank" title="Открыть в новой вкладке">PTSD - Дневник Переводчика</a></legend>
-                <p class="soc">YouTube канал, который упоминается выше на этой странице и на странице <a href="experience.html#dec20">Опыт работы</a>. Я приостановил работу над проектом, пока не придумаю новое направление развития. Нужно повышать качество контента, улучшать оборудование для записи. Пока что у меня нет на это времени, да и интересы больше направлены в сферу технического писательства. Однако, посмотреть всё равно советую, если вам близка тема переводов.</p>
+                <p class="soc">YouTube канал, который упоминается выше на этой странице и на странице <a href="experience.html#dec20" title="Открыть в текущей вкладке">Опыт работы</a>.</p>
+                <p>Я приостановил работу над проектом, пока не придумаю новое направление развития. Нужно повышать качество контента, улучшать оборудование для записи. Пока что у меня нет на это времени, да и интересы больше направлены в сферу технического писательства.</p>
+                <p>Но контент на канале интересный, особенно если вам близка тема переводов.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
                 <legend><a tabindex="6" href="https://www.instagram.com/proftradi/" class="soc ig" target="_blank" title="Открыть в новой вкладке">@Proftradi</a></legend>
-                <p class="soc">Профиль Proftradi в Instagram создавался для продвижения YouTube канала. Я периодически вспоминаю о нём, чтобы поделиться спонтанными мыслями или вопросами, но по большей части профиль приостановлен как и весь проект PTSD.</p>
+                <p class="soc">Профиль Proftradi в Instagram создавался для продвижения YouTube канала.</p>
+                <p>Я периодически вспоминаю о нём, чтобы поделиться спонтанными мыслями или вопросами, но по большей части профиль приостановлен как и всё остальное, что связанно с проектом PTSD.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
                 <legend><a tabindex="7" href="https://www.facebook.com/vladimir.markiev" class="soc fb" target="_blank" title="Открыть в новой вкладке">Facebook</a></legend>
-                <p class="soc">Я редко пользуюсь фейсбуком. Даю ссылку на свой профиль на случай, если для вас такой способ связи является предпочтительным. Но вернее будет равно писать на <a href="#em">электронную почту</a>, на письма я отвечаю всегда.</p>
+                <p class="soc">Даю ссылку на свой фейсбук на случай, если для вас такой способ связи является предпочтительным. Но вернее будет писать на <a href="#em">электронную почту</a>, на письма я отвечаю всегда.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
                 <legend><a tabindex="8" href="https://www.linkedin.com/in/vladimir-markiev-75737a138/" class="soc in" target="_blank" title="Открыть в новой вкладке">Linkedin</a></legend>
-                <p class="soc">Я зарегистрировался в Linkedin давно, но так до конца и не понял суть этой соцсети. Общаться неудобно, все предложения о работе ссылаются на сторонние сайты. Но мне всегда приходят уведомления, если кто-то хочет добавить меня в свою сеть. Я никогда не отказываю.</p>
+                <p class="soc">Я зарегистрировался в Linkedin давно, но так до конца и не понял суть этой соцсети. Общаться неудобно, все предложения о работе ссылаются на сторонние сайты. Мне приходят уведомления, если кто-то хочет добавить меня в свою сеть. Я никогда не отказываю.</p>
+                <p>Мне не совсем понимаю, зачем нужен Linkedin, но он не мешает, поэтому пусть будет.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
                 <legend><a tabindex="9" href="https://api.whatsapp.com/send?phone=+79211872272" class="soc wa noaction" target="_blank" title="Открыть в новой вкладке">Whatsapp</a></legend>
-                <p class="soc">Я всегда держу WatsApp радом как один из самых распространённых мессенджеров. Просто кликните на ссылку, вас либо перенесёт на веб-страницу WhatsApp, либо автоматически откроется приложение. Нет необходимости запоминать или записывать мой номер телефона.</p>
+                <p class="soc">Я всегда держу WatsApp радом как один из самых распространённых мессенджеров.</p>
+                <p>Просто кликните на ссылку, вас либо перенесёт на веб-страницу WhatsApp, либо автоматически откроется приложение. Нет необходимости запоминать или записывать мой номер телефона.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
@@ -144,17 +153,20 @@
             <br>
             <fieldset class="fs01">
                 <legend><a tabindex="11" href="https://t.me/grolribasi" name="tg" class="soc tg" target="_blank" title="Открыть в новой вкладке">@Grolribasi</a></legend>
-                <p class="soc">Telegram как оперативный способ связи мне нравится в последнее время всё больше. Он быстрый, не нагружает телефон, поддерживает звонки и синхронизируется без дополнительных настроек. Нажмите на ссылку, откроется приложение или веб-версия Telegram в новой вкладке. Можно ещё найти меня по имени профиля - Grolribasi.</p>
+                <p class="soc">Telegram как оперативный способ связи мне нравится в последнее время всё больше. Он быстрый, не нагружает телефон, поддерживает звонки и синхронизируется без дополнительных настроек.</p>
+                <p>Нажмите на ссылку, откроется приложение или веб-версия Telegram в новой вкладке. Можно ещё найти меня по имени профиля - Grolribasi.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
                 <legend><a tabindex="12" class="soc em noaction" href="mailto:vladimir-markiev@gmail.com?subject=Сообщение с сайта&body=Маркиев Владмир, здравствуйте," class="soc" target="_blank" name="em" title="Открыть в новой вкладке">vladimir-markiev@gmail.com</a></legend>
-                <p class="soc">Просто нажмите на адрес электронной почты, откроется новая вкладка с частично заполненными темой и телом письма. Чтобы ссылка открылась, необходимо иметь установленный почтовый клиент на компьютере. Но вы можете просто скопировать почтовый адрес и вставить его в письмо. Электронная почта - это самый простой и надёжный способ связи со мной. Я читаю все письма и отвечаю на все запросы.</p>
+                <p class="soc">Просто нажмите на адрес электронной почты, откроется новая вкладка с частично заполненными темой и телом письма.</p>
+                <p>Чтобы ссылка открылась, необходим почтовый клиент. Но вы можете просто скопировать почтовый адрес и вставить его в письмо. Электронная почта - это самый простой и надёжный способ связи со мной. Я читаю все письма и отвечаю на все запросы.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
                 <legend><a tabindex="13" href="tel:+79211872272" class="soc ph no-sel noaction" title="Позвонить">+79211872272</a></legend>
-                <p class="soc">Мне часто поступают спам-звонки, я настораживаюсь при виде незнакомого номера. Поэтому я защитил номер телефона от копирования и перетаскивания. Если нужно оперативно связаться со мной по телефону, лучше использовать мессенджеры, например <a href="#tg">Telegram</a>. Используйте звонок в самом крайнем случае или чтобы добавить меня в контакты.</p>
+                <p class="soc">Я защитил номер телефона от копирования и перетаскивания, так как мне часто поступают спам-звонки, и я настораживаюсь при виде незнакомого номера.</p>
+                <p>Если нужно оперативно связаться со мной по телефону, лучше использовать мессенджеры, например <a href="#tg">Telegram</a>. Используйте звонок в самом крайнем случае или чтобы добавить меня в контакты.</p>
             </fieldset>
         </div>
 
