--- a/cases.html
+++ b/cases.html
@@ -6,10 +6,8 @@
     <meta http-equiv="content-type" content="text/html">
     <title>Портфолио. Владимир Маркиев</title>
 
-    <!-- Preload fonts -->
-    <link rel="preload" href="css/style_fonts.css" as="style">
-
     <!-- Stylesheets -->
+    <link href="css/style_fonts.css" as="style">
     <link rel="stylesheet" href="css/style_main.css">
     <link rel="stylesheet" href="css/style_nav.css">
     <link rel="stylesheet" href="css/style_footer.css">
@@ -70,7 +68,7 @@
     <ul class="breadcrumb" id="breadcrumb">
         <li>
             <!-- КНОПКА МЕНЮ -->
-            <button class="openbtn" id="openbtn">Открыть меню</button>
+            <button class="openbtn" id="openbtn">Меню</button>
         </li>
         <li>
             <a tabindex="7" href="index.html">Главная</a>
@@ -85,34 +83,46 @@
 
         <div class="content">
             <h1 class="h1">Портфолио работ технического писателя и сертификаты</h1>
-           <p>На этой странице я собрал основные примеры своих работ. К каждому примеру я добавил краткое описание с пояснением. Чтобы не перегружать страницу предпросмотром файлов, я оставил только ссылки на каждый пример. Если вам интересны мои достижения и награды, вы найдёте их <a href="#achievements" title="Открыть в текущей вкладке">внизу страницы</a>. Если же вы хотели посмотреть моё резюме и перепутали страницу, вы можете посмотреть резюме на странице <a href="experience.html" title="Открыть в текущей вкладке">Опыт работы</a>. Навыки, которые позволи мне создать эти примеры, я перечислил на странице <a href="skills.html" title="Открыть в текущей вкладке">Навыки</a>.</p>
+            <p>На этой странице я собрал основные примеры своих работ. К каждому примеру я добавил краткое описание с пояснением.</p>
+            <p>Чтобы не перегружать страницу предпросмотром файлов, я оставил только ссылки на каждый пример. Если вам интересны мои достижения и награды, вы найдёте их <a href="#achievements" title="Открыть в текущей вкладке">внизу страницы</a>.</p>
+            <p>Если же вы хотели посмотреть моё резюме и перепутали страницу, вы можете посмотреть резюме на странице <a href="experience.html" title="Открыть в текущей вкладке">Опыт работы</a>. Навыки, которые позволи мне создать эти примеры, я перечислил на странице <a href="skills.html" title="Открыть в текущей вкладке">Навыки</a>.</p>
         </div>
         <div class="content cases">
             <h2 class="h2">Примеры работ</h2>    
 
-                <p><a class="source" href="https://github.com/Grolribasi/grolribasitory/blob/main/%23rzd_manual.pdf" target="_blank" title="Открыть в новой вкладке">Как купить билет на сайте РЖД.pdf</a>Тестовое задание на AsciiDoc. По заданию нужно было написать инструкцию для покупки билета на сайте РЖД в формате AsciiDoc. После инструкцию нужно было опубликовать в репозиторий GitHub. Это был мой первый опыт с AsciiDoc. Я настроил среду Linux для работы с AsciiDoc и GitHub: установил Ruby, AsciiDoctor, добавил SSH ключи. Я работал с преобразованием в PDF и git-репозиторием через терминал. Получилось интересно. Исходники доступны в моём <a href="https://github.com/Grolribasi/grolribasitory" target="_blank" title="Открыть в новой вкладке">GitHub</a>.</p>
+                <p><a class="source" href="https://github.com/Grolribasi/grolribasitory/blob/main/%23rzd_manual.pdf" target="_blank" title="Открыть в новой вкладке">Как купить билет на сайте РЖД.pdf</a>Тестовое задание на AsciiDoc. По заданию нужно было написать инструкцию для покупки билета на сайте РЖД в формате AsciiDoc. После инструкцию нужно было опубликовать в репозиторий GitHub.</p>
+                <p>Это был мой первый опыт с AsciiDoc. Я настроил среду Linux для работы с AsciiDoc и GitHub: установил Ruby, AsciiDoctor, добавил SSH ключи. Я работал с преобразованием в PDF и git-репозиторием через терминал. Получилось интересно. Исходники доступны в моём <a href="https://github.com/Grolribasi/grolribasitory" target="_blank" title="Открыть в новой вкладке">GitHub</a>.</p>
         </div>
         
         <div class="content cases">
                 
-                <p><a class="source" href="img/RDP_Linux.pdf" target="_blank">RDP-клиенты для Linux.pdf</a>Статья была написана по SEO-заданию для блога Selectel. Было очень интересно разобраться в клиентах удалённого доступа для Linux. Я работал в соответствии с чётким SEO-заданием, поэтому статья называется "RDP-клиенты", несмотря на то, что включает также разбор VNC и клиентов, работающих по проприетарному протоколу. Мне понравилось писать технический текст о чём-то, чего я не знал раньше. Такие статьи помогают лучше разобраться в новой или уже знакомой теме.</p>
+                <p><a class="source" href="img/RDP_Linux.pdf" target="_blank">RDP-клиенты для Linux.pdf</a>Статья была написана по SEO-заданию для блога Selectel. Было очень интересно разобраться в клиентах удалённого доступа для Linux.</p>
+                <p>Я работал в по чёткому SEO-заданию, поэтому статья называется "RDP-клиенты", несмотря на то, что включает также разбор VNC и клиентов, работающих по проприетарному протоколу.</p>
+                <p>Мне понравилось писать технический текст о чём-то, чего я не знал раньше. Такие статьи помогают лучше разобраться в новой или уже знакомой теме.</p>
                 <p>Для Selectel я написал ещё несколько статей. Например, про <a href="https://selectel.ru/blog/osi-for-beginners/" >Модель OSI</a> или <a name="linux" href="https://selectel.ru/blog/basic-linux-commands/">Основные команды терминала Linux</a>.</p>
         </div>
 
         <div class="content cases">
-            <p><a class="source" href="img/Privacy_policy.pdf" target="_blank" title="Открыть в новой вкладке">Политика конфиденциальности браузера.pdf</a>В 2020 году я писал политику конфиденциальности для одного браузера. Это был мой первый опыт в создании подобных текстов. Я проанализировал политики конфиденциальности других браузеров, чтобы создать свой документ по похожему шаблону. Мне понадобилось исследовать правила написания политики, изучить тон, и собрать по фрагментам новый документ. Также я писал EULA, Terms and Conditions. Но я создавал документы в MS Word, ещё не зная всех возможностей языков разметки.</p>
+            <p><a class="source" href="img/Privacy_policy.pdf" target="_blank" title="Открыть в новой вкладке">Политика конфиденциальности браузера.pdf</a>В 2020 году я писал политику конфиденциальности для одного браузера.</p>
+            <p>Я проанализировал политики конфиденциальности других браузеров, чтобы создать свой документ по похожему шаблону. Мне понадобилось исследовать правила написания политики, изучить тон, и собрать по фрагментам новый документ.</p>
+            <p>Также я писал EULA, Terms and Conditions. Но я создавал документы в MS Word, ещё не зная всех возможностей языков разметки.</p>
         </div>
 
         <div class="content cases">
-            <p><a class="source" href="img/virus.pdf" target="_blank" title="Открыть в новой вкладке">Вирусные угрозы.pdf</a>Пример текста о новой вирусной угрозе. Я исследовал примеры новостей об обнаружении вирусных угроз, чтобы написать свою новость в соответствующем тоне. Но новость должна быть правдоподобной, поэтому мне понадобилось исследовать ещё техническую сторону вопроса. Я также предложил дополнительные вопросы, которые можно задать вирусному аналитику. Я считаю, что получилось неплохо, если учесть, что я никогда не работал с вирусными угрозами.</p>
+            <p><a class="source" href="img/virus.pdf" target="_blank" title="Открыть в новой вкладке">Вирусные угрозы.pdf</a>Я исследовал примеры новостей об обнаружении вирусных угроз, чтобы написать свою новость в соответствующем тоне.</p>
+            <p>Новость должна быть правдоподобной, поэтому мне понадобилось исследовать ещё техническую сторону вопроса. Я также предложил дополнительные вопросы, которые можно задать вирусному аналитику.</p>
+            <p>Мне кажется, что получилось неплохо, если учесть, что я никогда не работал с вирусными угрозами.</p>
         </div>
 
         <div class="content cases">
-            <p><a href="img/time.pdf" class="source" target="_blank" title="Открыть в новой вкладке">Настройка часового пояса.pdf</a>От меня требовалось составить инструкцию для младшего системного администратора о том, как сменить часовой пояс на всех машинах в сети. Нужно было также запретить смену часового пояса всем пользователям, кроме администраторов. Задание было сложным, но интересным. Потребовалось много пользоваться поиском и проводить исследования. Одна из сложностей заключалась в том, что большую часть руководства приходилось писать без возможности "пощупать процесс своими руками". У меня не было доменной сети с произвольным количеством машин, на которой я мог бы практиковаться.</p>
+            <p><a href="img/time.pdf" class="source" target="_blank" title="Открыть в новой вкладке">Настройка часового пояса.pdf</a>От меня требовалось составить инструкцию для младшего системного администратора о том, как сменить часовой пояс на всех машинах в сети. Нужно было также запретить смену часового пояса всем пользователям, кроме администраторов.</p>
+            <p>Задание было сложным, но интересным. Потребовалось много пользоваться поиском и проводить исследования. Одна из сложностей заключалась в том, что большую часть руководства приходилось писать без возможности "пощупать процесс своими руками". У меня не было доменной сети с произвольным количеством машин, на которой я мог бы практиковаться.</p>
         </div>
 
         <div class="content cases">
-            <p><a href="img/time.pdf" class="source" target="_blank">DITA</a>На странице <a href="skills.html" title="Открыть в текущей вкладке">Навыки</a> я упомянул, что умею работать с Markdown и DITA, но не привёл примеров работ. Объём исходного кода документации слишком большой и пока не в открытом доступе. В открытом доступе только конечный результат, но что толку от результата без исходников? Тем не менее, я всегда рад пообщаться с людьми, которые пишут документацию на DITA. Можете поделиться со мной своими проблемами и идеями. А можете спросить меня, как мне нравится DITA и как с ней работать. Мои контакты даны в самом низу и на странице <a href="about.html">Обо мне</a>. Пишите, буду рад поболтать.</p>
+            <p><a href="#" class="source" target="_blank">DITA</a>На странице <a href="skills.html" title="Открыть в текущей вкладке">Навыки</a> я упомянул, что умею работать с Markdown и DITA, но где же примеры работ?</p>
+            <p>Объём исходного кода документации слишком большой и пока не в открытом доступе. В открытом доступе только конечный результат, от которого мало толку без исходников.</p>
+            <p>Я всегда рад пообщаться с людьми, которые пишут документацию на DITA. Можете поделиться со мной своими проблемами и идеями. А можете спросить меня, как мне нравится DITA и как с ней работать. Мои контакты даны в самом низу и на странице <a href="about.html">Обо мне</a>. Пишите, буду рад поболтать.</p>
         </div>
 
 
