--- a/education.html
+++ b/education.html
@@ -6,10 +6,8 @@
     <meta http-equiv="content-type" content="text/html">
     <title>Образование. Владимир Маркиев</title>
 
-    <!-- Preload fonts -->
-    <link rel="preload" href="css/style_fonts.css" as="style">
-
     <!-- Stylesheets -->
+    <link href="css/style_fonts.css" as="style">
     <link rel="stylesheet" href="css/style_main.css">
     <link rel="stylesheet" href="css/style_nav.css">
     <link rel="stylesheet" href="css/style_footer.css">
@@ -69,7 +67,7 @@
     <ul class="breadcrumb" id="breadcrumb">
         <li>
             <!-- КНОПКА МЕНЮ -->
-            <button class="openbtn" id="openbtn">Открыть меню</button>
+            <button class="openbtn" id="openbtn">Меню</button>
         </li>
     
         <li>
@@ -83,33 +81,42 @@
 
     <div class="main">
         <div class="content">
-            <h1 class="h1">Места обучения Маркиева Владимира</h1>
-            <h2 class="h2">2020. Курсы и самостоятельное обучение</h2>
-            <p>В январе 2020 года я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я пробовал работать с рекламными сетями и раньше, но совсем не так подробно. Курс познакомил меня с такими понятиями как источники трафика, стоимость за клик, научил выделять целевую аудиторию. Это было полезно. После курса я понял, что профессионально заниматься настройкой таргета и рекламы в соцсетях я не хочу.</p> 
+            <h1 class="h1">Места обучения Маркиева&nbsp;Владимира</h1>
+            <h2 class="h2">2020. Курсы и самостоятельное&nbsp;обучение</h2>
+            <p>В январе 2020 года я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я пробовал работать с рекламными сетями и раньше, но совсем не так подробно.</p>
+            <p>Курс познакомил меня с такими понятиями как источники трафика, стоимость за клик, научил выделять целевую аудиторию. Это было полезно. После курса я понял, что профессионально заниматься настройкой таргета и рекламы в соцсетях я не хочу.</p> 
 
             <p>Но именно благодаря курсу я захотел создать свой сайт. Сперва это был ленд на тильде, а потом стукнула пандемия, самоизоляция и самообучение. Я прошёл курс по HTML и CSS и создал первую версию этого сайта.</p>
         </div>
 
         <div class="content">
             <h2 class="h2">2016 - 2019. Аспирантура в СПБГУ</h2>
-            <p>Поступить в аспирантуру я планировал ещё когда учился в школе. В бакалавриате я думал, что стану доктором наук. Но реальность внесла свои коррективы. Во-первых, нужно было зарабатывать достаточно, чтобы снимать квартиру и не умереть с голоду. Во-вторых, степень доктора наук меня перестала меня привлекать. Чтобы успешно закончить аспирантуру, я должен был написать N работ. Качество работ совсем не было важно, важно было только количество. Преподавать в университете я тоже расхотел. Как здорово, что я это понял после 4 лет в педагогическом университете! Я отучился в аспирантуре три года, включая год академического отпуска, и отчислился.</p>
+            <p>Поступить в аспирантуру я планировал ещё когда учился в школе. В бакалавриате я думал, что стану доктором наук. Но реальность внесла свои коррективы.</p>
+            <p>Во-первых, нужно было зарабатывать достаточно, чтобы снимать квартиру и не умереть с голоду. Во-вторых, степень доктора наук меня перестала меня привлекать.</p>
+            <p>Чтобы успешно закончить аспирантуру, я должен был написать N работ. Качество работ совсем не было важно, важно было только количество. Преподавать в университете я тоже расхотел. Как здорово, что я это понял после 4 лет в педагогическом&nbsp;университете!</p>
+            <p>Я отучился в аспирантуре три года, включая год академического отпуска, и отчислился.</p>
         </div>
 
         <div class="content">
             <h2 class="h2">2014 - 2016. Магистратура в СПБГЭУ</h2>
-            <p>Я поступил в магистратуру СПБГЭУ по специальности "теория перевода и межкультурная коммуникация", которую мне порекомендовала мой научный руководитель Т. А. Клепикова. Моей радости не было предела. Наконец-то переводческая профессия! А ещё и переезд в Санкт-Петербург. Но почему-то упор делался на научную деятельность, а не на перевод. Я хотел быть переводчиком, но не очень хотел быть учёным.</p>
+            <p>Я поступил в магистратуру СПБГЭУ по специальности "теория перевода и межкультурная&nbsp;коммуникация", которую мне порекомендовала мой научный руководитель Т. А. Клепикова.</p>
+            <p>Моей радости не было предела. Наконец-то переводческая профессия! А ещё и переезд в Санкт-Петербург.</p>
+            <p>Но почему-то упор делался на научную деятельность, а не на перевод. Я хотел быть переводчиком, но не очень хотел быть учёным.</p>
         </div>
 
         <div class="content">
-            <h2 class="h2">2010 - 2014. Бакалавриат в РГПУ им. А.И. Герцена (ВФ)</h2>
-            <p>Я поступил в Выборг случайно. Сначала я хотел поступать в Санкт-Петербург, но у меня не было льгот и я не смог обойти победителей олимпиад. В ВФ Герцена я попал под эксперимент - первый год трёхступенчатой системы - бакалавриат, магистратура и аспирантура. Это было дивное время, я полюбил Выборг и до сих пор стараюсь приезжать почаще, чтобы погулять по улицам города.</p>
+            <h2 class="h2">2010 - 2014. Бакалавриат в РГПУ&nbsp;им.&nbsp;А.И.&nbsp;Герцена (ВФ)</h2>
+            <p>Я поступил в Выборг случайно. Сначала я хотел поступать в Санкт-Петербург, но у меня не было льгот и я не смог обойти победителей олимпиад.</p>
+            <p>В ВФ Герцена я попал под эксперимент - первый год трёхступенчатой системы - бакалавриат, магистратура и аспирантура. Это было дивное время, я полюбил Выборг и до сих пор стараюсь приезжать почаще, чтобы погулять по улицам города.</p>
             
-            <p>Моя специальность в ВФ Герцена называлась "Английский язык и компьютерная лингводидактика". Это значит обучение английскому языку при помощи компьютерных технологий. Но это только на бумаге, потому что готовили из нас обычных филологов.</p>
+            <p>Моя специальность в ВФ Герцена называлась "Английский язык и компьютерная лингводидактика". Это значит обучение английскому языку при помощи компьютерных технологий. Но это только на бумаге, готовили из нас обычных филологов.</p>
         </div>
 
         <div class="content">
             <h2 class="h2">Салминская средняя школа</h2>
-            <p>Я ходил в обычную общеобразовательную школу в небольшом посёлке в Карелии. В школе мне плохо давались точные предметы: алгебра и геометрия, но очень хорошо давались гуманитарные предметы: русский язык, литература и английский язык. Английский язык давался мне настолько хорошо, что на каждом уроке у меня была пятёрка. Поэтому я мечтал стать переводчиком уже с 8 или 9 класса. Я даже пытался выполнить тесты в бюро переводов и работать с переводческими программами. Сейчас я понимаю, что это выглядело смешно. У меня был ещё слабый уровень языка. Теперь я понимаю это и стараюсь не зазнаваться, потому что всегда найдётся кто-то ещё более профессиональный и ещё более опытный.</p>
+            <p>Я ходил в обычную общеобразовательную школу в небольшом посёлке в Карелии. В школе мне плохо давались точные предметы: алгебра и геометрия, но очень хорошо давались гуманитарные предметы: русский язык, литература и английский язык.</p>
+            <p>Английский язык давался мне настолько хорошо, что на каждом уроке у меня была пятёрка. Поэтому я мечтал стать переводчиком уже с 8 или 9 класса. Я даже пытался выполнить тесты в бюро переводов и работать с переводческими программами.</p>
+            <p>Сейчас я понимаю, что у меня был ещё слабый уровень языка. С тех пор я стараюсь помнить, что всегда найдётся кто-то ещё более профессиональный и ещё более опытный.</p>
         </div>
 
         <div class="footer">
