--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta http-equiv="content-type" content="text/html">
     <title>Технический писатель - Владимир Маркиев.</title>
 
-    <!-- Preload fonts -->
-    <link rel="preload" href="css/style_fonts.css" as="style">
-
     <!-- Stylesheets -->
+    <link href="css/style_fonts.css" as="style">
     <link rel="stylesheet" href="css/style_main.css">
     <link rel="stylesheet" href="css/style_nav.css">
     <link rel="stylesheet" href="css/style_footer.css">
+
     <!-- Stylesheets -->
 
     <meta name="robots" content="follow, index" />
@@ -72,7 +71,7 @@
     <ul class="breadcrumb" id="breadcrumb">
         <li>
         <!-- КНОПКА МЕНЮ -->
-            <button class="openbtn" id="openbtn">Открыть меню</button>
+            <button class="openbtn" id="openbtn">Меню</button>
         </li>
         <li>
             <a tabindex="7" href="#top">Наверх</a></li>
@@ -91,12 +90,15 @@
         </div>
             <div class="content">
             <h1 class="h1">Владимир Маркиев - Технический писатель из Санкт-Петербурга</h1>
-            <h2 class="h2"></h2>
-            <p>Здравствуйте и добро пожаловать! Меня зовут Владимир Маркиев, я - технический писатель из Санкт-Петербурга и это мой сайт. Я пишу техническую документацию для IT продуктов. Я общаюсь с разработчиками, бизнес-аналитиками и тестировщиками на общем языке, чтобы потом создать описание продукта. Я умею создавать документацию на нескольких языках разметки: Markdown, DITA, AsciiDoc. Овладеть Markdown было совсем несложно, я смог освоить этот формат за несколько дней. Адаптироваться к DITA пришлось уже пару месяцев. Зато теперь я в восторге от неё из-за возможности повторного использования. С AsciiDoc я пока что работал совсем мало, буквально создал одно пробное руководство, но он показался мне любопытным и я бы с радостью поработал с ним ещё. Подробнее о моих навыках вы можете прочитать на странице <a href="skills.html" title="Открыть в текущей вкладке">Мои навыки</a>.</p>
+            <h2 class="h2">Главная страница или куда&nbsp;вы&nbsp;попали</h2>
+            <p>Здравствуйте и добро пожаловать! Меня зовут Владимир Маркиев, я - технический писатель из Санкт-Петербурга и это мой сайт. Я пишу техническую документацию для IT продуктов.</p>
+            <p>Я общаюсь с разработчиками, бизнес-аналитиками и тестировщиками на общем языке, чтобы потом создать описание продукта. Я умею создавать документацию на нескольких языках разметки: Markdown, DITA, AsciiDoc. Овладеть Markdown было совсем несложно, я смог освоить этот формат за несколько дней.</p>
+            <p>Адаптироваться к DITA пришлось уже пару месяцев. Зато теперь я в восторге от неё из-за возможности повторного использования. С AsciiDoc я пока что работал совсем мало, буквально создал одно пробное руководство, но он показался мне любопытным и я бы с радостью поработал с ним ещё. Подробнее о моих навыках вы можете прочитать на странице <a href="skills.html" title="Открыть в текущей вкладке">Мои навыки</a>.</p>
             <p>Я далеко не сразу стал техническим писателем. Я работал переводчиком, занимался фрилансом, даже работал в сфере ВЭД. Если интересно, можете проследить весь мой профессиональный путь на странице <a href="experience.html" title="Открыть в текущей вкладке">Опыт работы</a>.</p>
             <p>Интересный факт обо мне: я очень люблю истории людей. Истории из жизни простых людей всегда полны интереснейших для меня деталей. Если вы, как и я, любите истории и хотели бы лучше ознакомиться моей, можете почитать страницу <a href="education.html">Образование</a>. Там я рассказываю про своё образование и любопытные перипетии в моей жизни.</p>
             <p>В то же время я пойму, если вам есть дело только до сухих фактов. На странице <a href="cases.html" title="Открыть в текущей вкладке">Портфолио</a> собраны примеры моих работ. Это только некоторые из примеров моих работ, вы всегда можете связаться со мной и запросить больше примеров.</p>
-            <p>Все мои контакты я разместил на странице <a href="about.html" title="Открыть в текущей вкладке">Я в соцсетях</a>. Если профиль в соцсети позволяет понять, что из себя представляет человек, то по ссылке вы найдёте настоящий кладезь информации обо мне. Я рассказал о своих интересах, и хобби и привёл ссылки на всевозможные социальные профили и проекты. А ещё мои контакты есть в футере на каждой странице.</p>
+            <p>Все мои контакты я разместил на странице <a href="about.html" title="Открыть в текущей вкладке">Я в соцсетях</a>. Если профиль в соцсети позволяет понять, что из себя представляет человек, то по ссылке вы найдёте настоящий кладезь информации обо мне. Я рассказал о своих интересах, и хобби и привёл ссылки на все возможные социальные профили и проекты.</p>
+            <p>А ещё мои контакты есть в футере на каждой странице.</p>
         </div>
         <div class="footer">
         <p>2020&nbsp;-&nbsp;<script>document.write(new Date().getFullYear())</script>.
