--- a/skills.html
+++ b/skills.html
@@ -6,10 +6,8 @@
     <meta http-equiv="content-type" content="text/html">
     <title>Навыки технического писателя. Владимир Маркиев</title>
 
-    <!-- Preload fonts -->
-    <link rel="preload" href="css/style_fonts.css" as="style">
-
     <!-- Stylesheets -->
+    <link href="css/style_fonts.css" as="style">
     <link rel="stylesheet" href="css/style_main.css">
     <link rel="stylesheet" href="css/style_nav.css">
     <link rel="stylesheet" href="css/style_footer.css">
@@ -74,7 +72,7 @@
     <ul class="breadcrumb" id="breadcrumb">
         <li>
             <!-- КНОПКА МЕНЮ -->
-            <button class="openbtn" id="openbtn">Открыть меню</button>
+            <button class="openbtn" id="openbtn">Меню</button>
         </li>
         <li>
             <a tabindex="7" href="index.html">Главная</a>
@@ -88,10 +86,13 @@
     <div class="main">
         <div class="content">
             <h1 class="h1">Мои навыки как технического писателя</h1>
-            <p>На этой странице перечислены мои навыки, важные в профессии технического писателя. Если вам интересно, как я пришёл к этой профессии, посмотрите страницу <a href="experience.html">Опыт работы</a>. Посмотреть примеры работ в подтверждение навыков можно на странице <a href="cases.html">Портфолио</a>.</p>
-            <p>Если вы никогда не слышали о профессии технического писателя, попробую объяснить кратко своими словами, кто это такой. Технический писатель - это человек, который пишет документацию. Технический писатель может писать документацию в любой сфере. Но в сфере IT документация востребована чаще. Из своего опыта могу сказать, что на сайтах вакансий очень мало объявлений о вакансиях технического писателя. Обычно технические писатели решают следующие задачи: описывают работу системы, собирают и сохраняют знания разработчиков и аналитиков, структурируют уже существующие разрозненные фрагменты информации в одном месте. Реже, технические писатели могут писать что-нибудь на языках программирования, тестировать функции или, например, работать с API. Должность технического писателя важна настолько же, насколько важна документация для конкретного продукта. То есть, прежде чем вводить новую должность, необходимо взвесить все за и против.</p>
-            <p>Я считаю, что документация нужна и важна. Мне очень нравится профессия технического писателя. Я стараюсь развивать свои навыки. Но свой сайт я обновляю реже, чем узнаю что-то новое, поэтому информация на этой странице может быть не самой полной.</p>
-            <p>Один из моих самых важных навыков - это уметь писать документацию так, чтобы её потом можно было перевести. Я, как человек, долго занимавшийся переводом, понимаю сложности локализации, поэтому умею предвидеть трудности при переводе ещё до его начала. Другие мои навыки как технического писателя перечислены ниже:</p>
+            <p>На этой странице перечислены мои профессиональные навыки. Если вам интересно, как я пришёл к профессии, посмотрите страницу <a href="experience.html">Опыт работы</a>. Посмотреть примеры работ в подтверждение навыков можно на странице <a href="cases.html">Портфолио</a>.</p>
+            <p>Я по своему опыту знаю, что на сайтах по поиску работы вакансии технического писателя встречаются очень редко. Поэтому, если вы никогда не слышали о профессии технического писателя, попробую объяснить кратко своими словами, кто это такой.</p>
+            <p>Технический писатель - это человек, который пишет документацию. Технический писатель может писать документацию в любой сфере, но чаще всего документация востребована в сфере IT.</p>
+            <p>Обычно технические писатели решают такие задачи как: описать работу продукта, собрать и структурировать знания команды разработки, объединить уже существующую, но разрозненную информацию о продукте. Технические писатели могут использовать языки программирования, тестировать функции или, например, работать с API, но такие задачи встречаются редко.</p>
+            <p>Должность технического писателя важна настолько же, насколько важна документация для конкретного продукта. Прежде чем вводить новую должность, нужно сначала понять, насколько она важна для вас. Если спросите меня, я отвечу что документация нужна и важна. Но говорю предвзято, ведь мне очень нравится моля профессия.</p>
+            <p>Я стараюсь постоянно приобретать новые навыки и расширять уже существующие, но сайт получается обновлять реже. Поэтому информация на этой странице может быть не самой полной.</p>
+            <p>Как человек, долго занимавшийся переводом, я понимаю сложности локализации, поэтому умею предвидеть трудности при переводе ещё до его начала. Я считаю, что это один из моих самых важных навыков - уметь писать документацию так, чтобы её потом можно было легко перевести. Другие мои профессиональные навыки перечислены ниже.</p>
             
             <button class="accordion">Необязательно в таком порядке:</button>
             <div class="panel">
@@ -100,24 +101,24 @@
                     <li>Свободно пишу на Markdown. Это удобный язык разметки для простых задач.</li>
                     <li>Умею писать на AsciiDoc и экспортировать в PDF или HTML. Я писал на нём совсем немного, но язык приятный. Я бы с большим удовольствием поработал с ним ещё.</li>
                     <li>Умею работать с YouTrack, ставить задачи, оценивать время на выполнение и отчитываться о проделанной работе.</li>
-                    <li>Люблю Linux, знаю основные команды терминала, писал <a href="cases.html#linux" title="Открыть в текущей вкладке">статью</a> по теме. При помощи гугла, инструкций и интуиции могу даже настроить DNS. С ядром не работал.</li>
-                    <li>Умею работать с Git из терминала Linux и через GUI. Знаю Git Fetch, Pull, Commit, Push, могу создавать ветки, объединять и работать с репозиториями.</li>
-                    <li>Быстро обучаюсь. Быстро изучаю новое программное обеспечение. За месяц смог разобраться с Oxygen XML. За 20 дней изучил основы HTML, чтобы создать сайт.</li>
+                    <li>Люблю Linux, знаю основные команды терминала, писал <a href="cases.html#linux" title="Открыть страницу портфолио">статью</a> по теме. При помощи гугла, инструкций и интуиции могу даже настроить DNS. С ядром не работал.</li>
+                    <li>Умею работать с Git из терминала Linux и через GUI. Знаю Git Fetch, Pull, Commit, Push, могу создавать и объединять ветки, работать с контролем версий.</li>
+                    <li>Быстро обучаюсь. Быстро изучаю новое программное обеспечение. За месяц смог разобраться с Oxygen XML, чтобы начать писать на DITA. За 20 дней изучил основы HTML, чтобы создать сайт.</li>
                     <li>Любознателен. Люблю изучать функции и настройки программ. Например, добавить словарь в Sublime Text, подключить GIT к редактору и т.д.</li>
-                    <li>Умею задавать вопросы разработчикам, бизнес-аналитикам и всем, кому можно задать вопрос. В том числе и глупые.</li>
+                    <li>Умею задавать вопросы разработчикам, бизнес-аналитикам и всем, кому можно задать вопрос. Даже, если вопрос кажется глупым.</li>
                     <li>Понимаю ответы на вопросы, и умею их объяснять на языке пользователя.</li>
                     <li>Умею диагностировать проблемы при их возникновении. Обычно я добираюсь до сути проблемы самостоятельно, но, к сожалению, не всегда могу её решить.</li>
-                    <li>Умею работать со средствами виртуализации Oracle VM Virtual Box и VMware vSphere. Настраивал Guest Additions и делал снапшоты.</li>
-                    <li>Умею работать с Windows Server и IIS. А поначалу все эти настройки меня пугали.</li>
-                    <li>Знаю HTML и CSS. Этот сайт тому доказательство.</li>
-                    <li>Знаю немного JavaScript. Я могу его понять, написать несколько простых функций. Знаком с основами ООП на JS: что такое объекты методы, функции.</li>
-                    <li>Умею работать с инструментами разработчика браузера. Создавать запросы в консоли, смотреть сообщения. Смотреть структуру кода и т.д.</li>
-                    <li>Владею русским и английским языками. Русский - родной. На английском говорю свободно и постоянно практикую. Всё-таки я долго работал переводчик.</li>
+                    <li>Умею работать со средствами виртуализации Oracle VM Virtual Box и VMware vSphere. Настраивал Guest Additions в Virtual Box и знаю, сколько снапшотов можно сделать в vSphere.</li>
+                    <li>Умею работать с Windows Server и IIS. Все эти настройки меня больше пугают.</li>
+                    <li>Знаю HTML и CSS. Этот сайт тому подтверждение.</li>
+                    <li>Знаю немного JavaScript. Я могу его понять, написать несколько простых функций. Знаком с основами ООП на JS: что такое объекты методы, функции. Написание программ на JS не осилю.</li>
+                    <li>Умею работать с инструментами разработчика в браузере. Смотреть сообщения в консоли, создавать запросы, смотреть структуру кода и т.д.</li>
+                    <li>Владею русским и английским языками. Русский - родной. На английском говорю и пишу свободно, использую его почти каждый день. Всё-таки я долго работал переводчиком.</li>
                     <li>Стараюсь не упускать из виду детали и делать работу вдумчиво. При этом обычно не нарушаю сроки.</li>
-                    <li>Знаком с SQL на уровне графического интерфейса MS SQL Studio. Пробовал создавать запросы. Дальше пока не пошло.</li>
-                    <li>Умею работать в Paint, Photoshop, Lightroom. Да, работать в Paint нужно уметь.</li>
-                    <li>Отлично владею CAT-Программами MemoQ, SDL Trados, MateCat, Smartcat. Умею настраивать память переводов, базы терминов и API машинного перевода.</li>
-                    <li>Умею следовать документации. Читаю свою документацию после написания.</li>
+                    <li>Знаком с SQL на уровне графического интерфейса MS SQL Studio. Пробовал создавать базовые запросы. Дальше пока не пошло.</li>
+                    <li>Умею работать в Paint (да, работать в Paint нужно уметь), Photoshop, Lightroom.</li>
+                    <li>Отлично владею CAT-Программами: MemoQ, SDL Trados, MateCat, Smartcat. Умею настраивать память переводов, базы терминов и API машинного перевода.</li>
+                    <li>Умею следовать инструкциям и читать свою документацию после написания.</li>
                     <li>Люблю трудные, но выполнимые задачи.</li>
                 </ul>
             </div>
